# GroveApp

./: CMakeLists.txt  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/groveapp/: MainActivity.java
app/src/main/res/values/: strings.xml
